compiler/kernc_cli/tests/soundness/reject/mutability/immutable_trait_object_cannot_use_mut_pointer_impl.kn
// Constructing an immutable trait object from a mutable concrete pointer must
// not use a trait impl whose receiver is `&mut Concrete`; the proof receiver
// for `&Trait` is the read-only pointer view.
// stderr: the source pointer type must implement the target trait

trait Base {
    fn set(value: i32) void;
    fn get() i32;
};

struct Cell {
    value: i32,
};

impl &mut Cell : Base {
    pub fn set(value: i32) void {
        self.value = value;
    }

    pub fn get() i32 {
        return self.value;
    }
}

fn main() i32 {
    let mut cell = Cell.{ value: 1 };
    let obj = (cell..& as &Base);
    obj.set(42);
    return cell.value;
}
